package org.asif.app.components;

public enum DeploymentEnvironment {
    PRODUCTION,
    STAGING,
    DEVELOPMENT
}
