package org.asif.app.components;

public enum LoggingLevel {
    DEBUG,
    INFO,
    WARN,
    ERROR
}
