package org.asif.app.components;

public enum NetworkPolicy {
    DEFAULT,
    OPEN,
    RESTRICTED,
    CLOSED
}
