package org.asif.app.components;

public enum Region {
    US_EAST_1,
    US_WEST_2,
    EU_WEST_1,
    AP_SOUTH_1,
    AP_NORTHEAST_1,
    SA_EAST_1,
    CA_CENTRAL_1
}
