package org.asif.app.components;

public enum StorageType {
    STANDARD,
    PREMIUM,
    ARCHIVE
}
